# aiida-restapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  mypy.ini  pyproject.toml  setup.json  setup.py  tox.ini
.github/: check_version.py
.github/workflows/: cd.yml  ci.yml  publish-on-pypi.yml  validate_release_tag.py
aiida_restapi/: __init__.py  aiida_db_mappings.py  app.py  cli.py  config.py  exceptions.py  filter_syntax.py  helpers.py  identifiers.py  main.py  middleware.py  models.py  orm_mappings.py  resources.py  schemas.py  utils.py
aiida_restapi/cli/: main.py
aiida_restapi/common/: __init__.py  errors.py  exceptions.py  models.py  pagination.py  query.py  repository.py  types.py
aiida_restapi/graphql/: aiida_db_mappings.py  basic.py  comments.py  computers.py  config.py  entry_points.py  filter_syntax.py  groups.py  logs.py  main.py  nodes.py  orm_factories.py  plugins.py  sphinx_ext.py  users.py  utils.py
aiida_restapi/jsonapi/: adapters.py  hooks.py  responses.py  utils.py
aiida_restapi/jsonapi/models/: aiida.py  base.py  errors.py
aiida_restapi/models/: __init__.py  entities.py  json_api.py  node.py  querybuilder.py  responses.py  server.py
aiida_restapi/models/node/: __init__.py  models.py  registry.py
aiida_restapi/repository/: entity.py  node.py
aiida_restapi/routers/: auth.py  computers.py  daemon.py  graphql.py  groups.py  node.py  nodes.py  process.py  querybuilder.py  server.py  submit.py  users.py
aiida_restapi/routers/graphql/: __init__.py  comments.py  computers.py  groups.py  logs.py  main.py  nodes.py  users.py  utils.py
aiida_restapi/routers/tests/: styles.css  tests.py
aiida_restapi/routers/tests/templates/: node_mutation.html  node_mutation.js  node_post.html  node_post.js  querybuilder.html  querybuilder.js
aiida_restapi/services/: entity.py  node.py
aiida_restapi/static/: filter_grammar.lark
docs/source/: _toc.yml  conf.py  index.rst  intro.md
docs/source/apidoc/: aiida_restapi.graphql.rst  aiida_restapi.routers.rst  aiida_restapi.rst
docs/source/developer_guide/: index.md  index.rst
docs/source/user_guide/: get_started.md  get_started.rst  graphql.md  index.md  tutorial.md
examples/: example_01.py
examples/daemon_management/: README.md  script.py
examples/process_management/: README.md  script.py
examples/submit_quantumespresso_pw/: README.md  script.py
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_calculations.py  test_cli.py  test_computers.py  test_daemon.py  test_filter_syntax.py  test_groups.py  test_models.py  test_nodes.py  test_processes.py  test_querybuilder.py  test_server.py  test_submit.py  test_users.py
tests/test_graphql/: test_basic.py  test_comments.py  test_computers.py  test_entry_points.py  test_filter_syntax.py  test_full.py  test_groups.py  test_logs.py  test_nodes.py  test_users.py
tests/test_graphql/test_comments/: test_comment.yml  test_comments.yml  test_comments_order_by.yml
tests/test_graphql/test_computers/: test_computer.yml  test_computer_nodes.yml  test_computers.yml
tests/test_graphql/test_full/: test_full.yml
tests/test_graphql/test_groups/: test_group.yml  test_group_create.yml  test_group_label.yml  test_group_nodes.yml  test_groups.yml
tests/test_graphql/test_logs/: test_log.yml  test_logs.yml
tests/test_graphql/test_nodes/: test_node.yml  test_node_ancestors.yml  test_node_comments.yml  test_node_descendants.yml  test_node_incoming.yml  test_node_logs.yml  test_node_outgoing.yml  test_nodes.yml
tests/test_graphql/test_users/: test_user.yml  test_users.yml
tests/test_models/: test_comment_get_entities.yml  test_computer_get_entities.yml  test_group_get_entities.yml  test_user_get_entities.yml
